Add the crm tag

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "backend",
     "socket-io",
     "broadcasting",
-    "poltergeist"
+    "poltergeist",
+    "crm"
   ],
   "author": "Matthew Fritz <hello@matthewfritz.net>",
   "license": "MIT",
